# reel-scout

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  NOTICE  README.md  README.zh.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
commands/: scout.md
docs/: audio-panns-setup.md  codex-prompt-template.md  commands.md  crv-vs-reel-scout.md  gui-evaluation.md  known-issue-mcp-analyze-sync-timeout.md  roadmap.md  task-b1-video-analyzer-research-handover.md  task-e1-llm-backend-handover.md  vibe-reader-vs-reel-scout.md
docs/course-material/: COURSE_MATERIAL.md  ai_battle_storyboard.md  clarity_act_highlights.md  warren_rhetoric_playbook.md
hooks/scripts/: check-setup.sh
prompts/: README.md  focus-audit.md  hook-reverse-structure.md  script-breakdown.md  signal-reliability-cheatsheet.md  storyboard-visualize.md
reel_scout/: batch.py  bundle.py  cli.py  compare.py  config.py  db.py  i18n.py  ingest.py  inspector.py  inspire.py  mcp_install.py  ocr.py  patterns.py  research.py  scorer.py  shots.py  skill_install.py  stats.py  theme.py  track.py  viewer.py
reel_scout/analyze/: merger.py  pipeline.py
reel_scout/assets/fonts/: OFL-NOTICE.txt
reel_scout/audio/: rhythm.py
reel_scout/crawl/: __init__.py  instagram.py  tiktok.py  youtube.py  ytdlp.py
reel_scout/diarize/: __init__.py
reel_scout/export/: json_export.py  skeleton.py
reel_scout/llm/: ollama.py
reel_scout/mcp/: batch_worker.py  live.py  server.py  tools.py
reel_scout/transcribe/: __init__.py  faster_whisper.py  vtt.py
reel_scout/vision/: keyframe.py  ollama.py
scout_core/: __init__.py  contact_sheet.py  temporal_vision.py
scout_core/backends/: __init__.py  ollama_contact_sheet.py
scripts/: convert_cnn14_onnx.py  convert_panns_onnx.py  setup.py  web.sh
tests/: conftest.py  test_audio.py  test_batch.py  test_bundle.py  test_cli.py  test_compare.py  test_config_check.py  test_content_structure.py  test_crawl_instagram.py  test_crawl_youtube.py  test_db.py  test_diarize.py  test_env_discovery.py  test_ingest.py  test_inspector.py  test_inspire.py  test_json_export.py  test_keyframe.py  test_keyframes_survive_skip_vision.py  test_mcp.py  test_mcp_batch.py  test_mcp_inspect.py  test_mcp_install.py  test_merger.py  test_merger_measured.py  test_ocr.py  test_patterns.py  test_pipeline_local.py  test_research.py  test_rhythm.py  test_scorer.py  test_setup_preflight.py  test_shots.py  test_skeleton_export.py  test_skill_install.py  test_stats.py  test_tag_normalization.py  test_theme.py  test_track.py  test_transcribe.py  (+3 more)
