[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reel-scout"
version = "0.2.0"
description = "Short-form video analysis tool — crawl, transcribe, and visually analyze YouTube Shorts, Instagram Reels, and TikTok"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Hevin Yeh" }]
keywords = ["video", "analysis", "shorts", "reels", "tiktok", "whisper", "vlm"]

dependencies = [
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.1.0"]
audio = ["onnxruntime>=1.15.0", "numpy>=1.21.0"]
vector = ["lancedb>=0.4.0", "chromadb>=0.4.0"]
diarize = ["pyannote.audio>=3.1", "torch>=2.0"]
instagram = ["instaloader>=4.10"]
dev = ["pytest>=7.0"]

[project.scripts]
reel-scout = "reel_scout.cli:main"
reel-scout-mcp = "reel_scout.mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"
