[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "reel-scout"
dynamic = ["version"]
description = "Short-form video analysis tool — crawl, transcribe, and visually analyze YouTube Shorts, Instagram Reels, and TikTok"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Hevin Yeh (vulture.s)" }]
keywords = ["video", "analysis", "shorts", "reels", "tiktok", "whisper", "vlm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "yt-dlp>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/vulture-s/reel-scout"
Repository = "https://github.com/vulture-s/reel-scout"
Issues = "https://github.com/vulture-s/reel-scout/issues"
Changelog = "https://github.com/vulture-s/reel-scout/blob/master/CHANGELOG.md"

[project.optional-dependencies]
whisper = ["faster-whisper>=1.1.0"]
audio = ["onnxruntime>=1.15.0", "numpy>=1.21.0"]
vector = ["lancedb>=0.4.0", "chromadb>=0.4.0"]
diarize = ["pyannote.audio>=3.1", "torch>=2.0"]
instagram = ["instaloader>=4.10"]
dev = ["pytest>=7.0"]

[project.scripts]
reel-scout = "reel_scout.cli:main"
reel-scout-mcp = "reel_scout.mcp.server:main"

[tool.hatch.version]
path = "reel_scout/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"
