[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "reel-scout"
dynamic = ["version"]
description = "Short-form video analysis tool — crawl, transcribe, and visually analyze YouTube Shorts, Instagram Reels, and TikTok"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Hevin Yeh (vulture.s)" }]
keywords = ["video", "analysis", "shorts", "reels", "tiktok", "whisper", "vlm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "yt-dlp>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/vulture-s/reel-scout"
Repository = "https://github.com/vulture-s/reel-scout"
Issues = "https://github.com/vulture-s/reel-scout/issues"
Changelog = "https://github.com/vulture-s/reel-scout/blob/master/CHANGELOG.md"

[project.optional-dependencies]
whisper = ["faster-whisper>=1.1.0", "whisper-guard>=0.3.0"]
audio = ["onnxruntime>=1.15.0", "numpy>=1.21.0"]
vector = ["lancedb>=0.4.0", "chromadb>=0.4.0"]
# R-mig: diarization now lives in the speaker-align package; its [pyannote]
# extra pulls pyannote.audio (which brings torch). speaker-align is not yet on
# PyPI — install it editable on M2 (`pip install -e speaker-align[pyannote]`).
diarize = ["speaker-align[pyannote]"]
instagram = ["instaloader>=4.10"]
ocr = ["pytesseract>=0.3.10", "Pillow>=9.0"]
dev = ["pytest>=7.0", "whisper-guard>=0.3.0"]

[project.scripts]
reel-scout = "reel_scout.cli:main"
reel-scout-mcp = "reel_scout.mcp.server:main"

[tool.hatch.version]
path = "reel_scout/__init__.py"

# The skill is half the product and none of it used to ship. `pip install
# reel-scout` gave you the CLI and nothing an agent could load — no SKILL.md, no
# /scout command, no prompt pack, no setup preflight — so the documented flow was
# reachable only by cloning. Vendor those assets into the wheel under
# reel_scout/skill/ and `reel-scout skill install` lays them down where Claude
# looks. Paths here are repo-root-relative sources → in-wheel destinations.
[tool.hatch.build.targets.wheel]
packages = ["reel_scout"]

[tool.hatch.build.targets.wheel.force-include]
"SKILL.md" = "reel_scout/skill/SKILL.md"
"commands" = "reel_scout/skill/commands"
"prompts" = "reel_scout/skill/prompts"
"scripts/setup.py" = "reel_scout/skill/scripts/setup.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--tb=short -q"
